# wavelength

./: .env.example  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  blobanimation.cpp  blobanimation.h  compile_commands.json  constants.h  convert_svg_to_png.sh  dot.cpp  dot.h  dot_animation.cpp  dot_animation.h  font_manager.cpp  font_manager.h  main.cpp  navbar.cpp  navbar.h  resources.qrc
blob/core/: app_instance_manager.cpp  app_instance_manager.h  blob_absorption.cpp  blob_absorption.h  blob_animation.cpp  blob_animation.h  blob_config.h  blob_event_handler.cpp  blob_event_handler.h  blob_transition_manager.cpp  blob_transition_manager.h
blob/physics/: blob_physics.cpp  blob_physics.h
blob/rendering/: blob_render.cpp  blob_render.h  path_markers_manager.cpp  path_markers_manager.h
blob/states/: blob_state.h  idle_state.cpp  idle_state.h  moving_state.cpp  moving_state.h  resizing_state.cpp  resizing_state.h
blob/utils/: blob_math.h  blob_path.cpp  blob_path.h
docs/html/: animated__dialog_8cpp.html  animated__dialog_8cpp__incl.map  animated__dialog_8cpp__incl.md5  animated__dialog_8h.html  animated__dialog_8h.js  animated__dialog_8h__dep__incl.map  animated__dialog_8h__dep__incl.md5  animated__dialog_8h__incl.map  animated__dialog_8h__incl.md5  animated__dialog_8h_source.html  animated__stacked__widget_8cpp.html  animated__stacked__widget_8cpp__incl.map  animated__stacked__widget_8cpp__incl.md5  animated__stacked__widget_8h.html  animated__stacked__widget_8h.js  animated__stacked__widget_8h__dep__incl.map  animated__stacked__widget_8h__dep__incl.md5  animated__stacked__widget_8h__incl.map  animated__stacked__widget_8h__incl.md5  animated__stacked__widget_8h_source.html  annotated.html  annotated_dup.js  app__instance__manager_8cpp.html  app__instance__manager_8cpp__incl.map  app__instance__manager_8cpp__incl.md5  app__instance__manager_8h.html  app__instance__manager_8h.js  app__instance__manager_8h__dep__incl.map  app__instance__manager_8h__dep__incl.md5  app__instance__manager_8h__incl.map  app__instance__manager_8h__incl.md5  app__instance__manager_8h_source.html  appearance__settings__widget_8cpp.html  appearance__settings__widget_8cpp__incl.map  appearance__settings__widget_8cpp__incl.md5  appearance__settings__widget_8h.html  appearance__settings__widget_8h.js  appearance__settings__widget_8h__dep__incl.map  appearance__settings__widget_8h__dep__incl.md5  appearance__settings__widget_8h__incl.map  (+4384 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+109 more)
resources/translations/: en.json  pl.json
server/: bash.exe.stackdump  index.js  package-lock.json  package.json  setup-db.js  vercel.json
server/config/: db.js
server/models/: wavelength.js
server/routes/: api.js
server/services/: frequencyGapTracker.js  wavelengthService.js
server/utils/: helpers.js
server/websocket/: connectionManager.js  handlers.js  wsServer.js
src/app/: wavelength_config.cpp  wavelength_config.h
src/app/managers/: app_instance_manager.cpp  app_instance_manager.h  font_manager.cpp  font_manager.h  shortcut_manager.cpp  shortcut_manager.h  translation_manager.cpp  translation_manager.h
src/app/style/: cyberpunk_style.cpp  cyberpunk_style.h
src/auth/: authentication_manager.cpp  authentication_manager.h
src/blob/: blob_config.h
src/blob/core/: blob_animation.cpp  blob_animation.h
src/blob/physics/: blob_physics.cpp  blob_physics.h
src/services/: wavelength_event_broker.cpp  wavelength_event_broker.h  wavelength_state_manager.cpp  wavelength_state_manager.h
src/session/: session_coordinator.cpp  session_coordinator.h  wavelength_session_coordinator.cpp  wavelength_session_coordinator.h
src/storage/: database_manager.cpp  database_manager.h  wavelength_registry.cpp  wavelength_registry.h
src/util/: resize_event_filter.cpp  resize_event_filter.h  wavelength_utilities.cpp  wavelength_utilities.h
wavelength/: join_wavelength_dialog.h  wavelength_chat_view.cpp  wavelength_chat_view.h  wavelength_dialog.cpp  wavelength_dialog.h  wavelength_manager.cpp  wavelength_manager.h
wavelength/auth/: authentication_manager.cpp  authentication_manager.h
wavelength/connection/: connection_manager.cpp  connection_manager.h
wavelength/database/: database_manager.h
wavelength/dialogs/: join_wavelength_dialog.cpp  join_wavelength_dialog.h  wavelength_dialog.h
wavelength/files/: attachment_placeholder.h  attachment_queue_manager.cpp  auto_scaling_attachment.h
wavelength/managers/: wavelength_event_broker.h  wavelength_state_manager.h
wavelength/messages/: message_formatter.h  message_handler.cpp  message_handler.h  wavelength_message_processor.cpp  wavelength_message_processor.h  wavelength_message_service.cpp  wavelength_message_service.h  wavelength_radio_display.cpp  wavelength_radio_display.h  wavelength_stream_display.h  wavelength_text_display.cpp  wavelength_text_display.h
wavelength/network/: network_utilities.cpp  network_utilities.h
wavelength/registry/: wavelength_registry.cpp  wavelength_registry.h
wavelength/session/: wavelength_creator.cpp  wavelength_creator.h  wavelength_joiner.h  wavelength_leaver.h  wavelength_session_coordinator.h
wavelength/socket/: wavelength_socket_handler.cpp  wavelength_socket_handler.h
wavelength/ui/: auto_scaling_attachment.cpp  auto_scaling_attachment.h  cyber_attachment_viewer.cpp  cyber_attachment_viewer.h  cyberpunk_style.h  cyberpunk_text_effect.cpp
wavelength/util/: shortcut_manager.cpp  shortcut_manager.h  wavelength_config.cpp  wavelength_config.h  wavelength_utilities.cpp
wavelength/view/: settings_view.cpp  settings_view.h  wavelength_chat_view.h
(+280 files in other folders)
